# tiger

./: CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  hie.yaml  package.yaml  stack.yaml  tiger.cabal
app/: Main.hs
programs/: merge.tig  queens.tig
src/: Tokens.x
src/Data/: Symbol.hs
src/Language/Tiger/: Bug.hs
src/Language/Tiger/Syntax/: AST.hs  Errors.hs  Lexer.x  Loc.hs  Location.hs  Monad.hs  Parser.y  Token.hs
src/Tiger/: AST.hs  Parse.hs
src/Tiger/Parsing/: Expr.hs  Primitives.hs  Unescape.hs
src/Tiger/Reporting/: Annotation.hs
src/Tiger/Syntax/: AST.hs  Parse.hs
src/Tiger/Syntax/Parse/: Expr.hs  Primitives.hs  Unescape.hs
test/Tiger/Test/Reporting/: Annotation.hs
test/Tiger/Test/Syntax/Parse/: Unescape.hs
