cabal-version: 1.12

name:           tiger
version:        0.1.0.0
homepage:       https://github.com/githubuser/tiger#readme
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Data.Symbol
      Tiger.Reporting.Annotation
      Tiger.Syntax.AST
      Tiger.Syntax.Parse
      Tiger.Syntax.Parse.Expr
      Tiger.Syntax.Parse.Primitives
      Tiger.Syntax.Parse.Unescape
  other-modules:
      Paths_tiger
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , hashable
    , megaparsec
    , parser-combinators
    , text
  default-language: Haskell2010

executable tiger
  main-is: Main.hs
  other-modules:
      Paths_tiger
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , hashable
    , megaparsec
    , parser-combinators
    , text
    , tiger
  default-language: Haskell2010

test-suite tiger-test
  type: exitcode-stdio-1.0
  main-is: Tasty.hs
  other-modules:
      Tiger.Test.Reporting.Annotation
      Tiger.Test.Syntax.Parse.Unescape
      Paths_tiger
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , hashable
    , megaparsec
    , parser-combinators
    , tasty
    , tasty-discover
    , tasty-hunit
    , text
    , tiger
  default-language: Haskell2010
