cabal-version:      2.4

name:               tiger
version:            0.1.0.0
synopsis:           "Modern Compiler Implementation in ML" in Haskell
category:           Language
homepage:           https://github.com/wasabi315/tiger
bug-reports:        https://github.com/wasabi315/tiger
author:             wasabi315
maintainer:         wasabi.nvim.st@gmail.com
copyright:          (c) 2021 Satoshi Takimoto
license:            MIT
license-file:       LICENSE

extra-source-files: CHANGELOG.md

common defaults
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -O1
  default-extensions:
    -- Adopted from the GHC2021 language extension <https://github.com/ghc-proposals/ghc-proposals/blob/master/proposals/0380-ghc2021.rst> and the rio library's recommendation <https://github.com/commercialhaskell/rio#language-extensions>
    EmptyCase
    PostfixOperators
    TupleSections
    ImportQualifiedPost
    NamedFieldPuns
    RecordWildCards
    BangPatterns
    LambdaCase
    MultiWayIf
    ViewPatterns
    BinaryLiterals
    HexFloatLiterals
    NumericUnderscores
    OverloadedStrings
    GADTs
    RankNTypes
    TypeApplications
    PolyKinds
    StandaloneKindSignatures
    ExistentialQuantification
    TypeOperators
    ConstraintKinds
    TypeFamilies
    ExplicitForAll
    PartialTypeSignatures
    KindSignatures
    NamedWildCards
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    ConstrainedClassMethods
    InstanceSigs
    TypeSynonymInstances
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    StandaloneDeriving
    EmptyDataDeriving
    DeriveLift
    GeneralisedNewtypeDeriving
    DeriveGeneric

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    base ^>=4.14.1.0,
    array
  build-tool-depends:
    alex:alex,
    happy:happy
  exposed-modules:
    Language.Tiger.Syntax.Location
    Language.Tiger.Syntax.Token
    Language.Tiger.Syntax.Lexer
    Language.Tiger.Syntax.AST
  other-modules:

executable tiger
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base ^>=4.14.1.0,
    tiger

test-suite tiger-test
  import: defaults
  hs-source-dirs: test
  main-is: MyLibTest.hs
  type: exitcode-stdio-1.0
  build-depends:
    base ^>=4.14.1.0
